--- a/back-end/client/index.html
+++ b/back-end/client/index.html
@@ -69,7 +69,7 @@
 
 document.querySelector('#deletePlace').addEventListener('click', function() {
   if (placeArrLength <= 0) {
-    alert('First add or delete item')
+    alert('First add or delete a place')
     return; 
   }
 
